# youtube-film-search

./: .env.example  Dockerfile  README.md  ai.py  cache.py  compose.yaml  config.py  core.py  kinopoisk.py  main.py  matcher.py  pyproject.toml  telegram.py  test.py  test_lib.py  youtube.py  youtube_api.py
app/: ai.py  cache.py  config.py  core.py  files.py  karelia_pro.py  kinopoisk.py  log.py  main.py  matcher.py  messages.py  serialize.py  strings.py  telegram.py  test_lib.py  tests.py  throttling.py  youtube.py
